--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<version>42.3.3</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
