Spring boot Lesson5 in process with spring-data +DB connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/names
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
